--- a/apoyo_covid19.html
+++ b/apoyo_covid19.html
@@ -62,7 +62,7 @@
                 <h5>NOTA:</h5>
                 <h5>La causa del fallecimiento del padre, madre o apoderado deberá ser suscrita como COVID19.</h5>                     
             </div>            
-            <a class="waves-effect waves-light#0288d1 light-blue darken-2 btn" href="http://aulavirtual.autonomadeica.edu.pe/">POSTULA AQUI</a>
+            <a class="waves-effect waves-light#0288d1 light-blue darken-2 btn" href="http://aulavirtual.autonomadeica.edu.pe/course/view.php?id=2676">POSTULA AQUI</a>
             </br></br>
         </div>
     </main>
