--- a/apoyo_covid19.html
+++ b/apoyo_covid19.html
@@ -45,12 +45,12 @@
             <div class="card-panel">
                 <h5>1. Constancia de clasificación socieconómica según SISFOH: <a  href="https://operaciones.sisfoh.gob.pe/cse/">https://operaciones.sisfoh.gob.pe/cse/</a></h5>                
                 <h5>2. Voucher de pago derecho a Apoyo Económico (S/.15.00).</h5>
-                <h5>3. Ficha de Matrícula del periodo 2020-2 o documento que acredite el pago de matrícula.</h5>
-                <h5>4. Boleta de Notas del semestre 2020-1.</h5>
+                <h5>3. Ficha de Matrícula del periodo 2021-1 o documento que acredite el pago de matrícula.</h5>
+                <h5>4. Boleta de Notas del semestre 2020-2.</h5>
                 <h5>5. Constancia del Seguro contra accidentes (vigente/ ESSALUD/ SIS/ Seguro Particular). Si el estudiante no cuenta con seguro activo, solicitar la afiliación gratuita al servicio de salud (medico@autonomadeica.edu.pe).</h5>
                 <h5>6. Copia del carné de estudiante.</h5>
                 <h5>7. Documento Sustentatorio Aspecto Familiar (Copia de DNI de todos los integrantes del hogar)</h5>
-                <h5>8. Documento Sustentatorio Aspecto Económico (Boleta de pagos de cada uno de los miembros de la familia que perciban ingresos, 2 últimos meses).</h5>
+                <h5>8. Documento Sustentatorio Aspecto Económico (Boleta de pagos de cada uno de los miembros de la familia que perciban ingresos, 2 últimos meses o declaración jurada simple).</h5>
                 <h5>9. Documento que acredite el cese de labores, cese de actividades o suspensión perfecta.</h5>
                 <h5>10. Documento que acredite la modificación de contrato, reducción de remuneración y/o cese temporal de labores.</h5>
                 <br/><u><h5>Solo estudiantes con el responsable económico fallecido</h5></u>
