--- a/apoyo_covid19.html
+++ b/apoyo_covid19.html
@@ -43,7 +43,7 @@
         <div class="container section">
             <h4 >ADJUNTAR LOS REQUISITOS:</h4>
             <div class="card-panel">
-                <h5>1. Constancia de clasificación socieconómica según SISFOH: <a  href="https://operaciones.sisfoh.gob.pe/cse/">https://operaciones.sisfoh.gob.pe/cse/</a></h5>                
+                <h5>1. Constancia de clasificación socieconómica según SISFOH: <a  href="https://operaciones.sisfoh.gob.pe/cse/" target="_blank">[Abrir Enlace]</a></h5>                
                 <h5>2. Voucher de pago derecho a Apoyo Económico (S/.15.00).</h5>
                 <h5>3. Ficha de Matrícula del periodo 2021-1 o documento que acredite el pago de matrícula.</h5>
                 <h5>4. Boleta de Notas del semestre 2020-2.</h5>
